# mcp-server-mql5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: test_e2e.py  test_functional.py  test_mcp_client.py  test_performance.py
mcp_server_mql5/: __init__.py  __main__.py  server.py
mcp_server_mql5/core/: config.py  scraper.py  search.py  utils.py  web_client.py
tests/: test_scraper.py  test_search.py  test_server.py  test_utils.py  test_web_client.py
